# table-corpus-lineage

./: README.md  dashboard.html  generate.py  index.html  pyproject.toml  requirements.txt  sources.yaml  template.html
.claude/commands/: extract-dataset.md
.github/workflows/: deploy.yml
datasets/: fetaqa.yaml  hybridqa.yaml  naturalquestions.yaml  nqtables.yaml  ottqa.yaml  stsd.yaml  tabfact.yaml  totto.yaml  turl.yaml  wikitablequestions.yaml
scripts/: deploy.sh  generate.sh
