[project]
authors = [{ name = "inwonakng", email = "inwon.kang04@gmail.com" }]
dependencies = ["pyyaml>=6.0.3,<7"]
name = "benchmark-lineage"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
benchmark_lineage = { path = ".", editable = true }

[tool.pixi.tasks]
generate = "python generate.py -o dashboard.html"
