[project]
authors = [{ name = "inwonakng", email = "inwon.kang04@gmail.com" }]
dependencies = ["pyyaml>=6.0.3,<7"]
name = "benchmark-lineage"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
generate = "python generate.py -o dashboard.html"
